config cambio json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+
+  "name": "Repo_Action",
+
+  "version": "1.0.0",
+
+  "scripts": {
+    "test": "cypress run"
+  },
   "devDependencies": {
     "cypress": "^13.14.2"
   }
