--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      name: Fix Cypress permissions ## quitar?
+        run: chmod +x ./node_modules/.bin/cypress ##
+
       - name: Run Cypress tests
         run: npx cypress run
 
