--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14' # antes 14 (funciona pero se raya)
+          node-version: '14' # antes 14 (funciona pero se raya) / No funciona con v16 ni v18...
 
       - name: Install dependencies
         run: npm install
