--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install -g newman
 
       - name: Run Postman tests
-        run: newman run postman/Rick&Morty.postman_collection.json
+        run: newman run /postman/Rick&Morty.postman_collection.json
 
 
 
