--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,15 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Install Newman
-        run: npm install -g newman
+        run: 
+        npm install -g newman
+        npm audit fix --force
 
       - name: Run Postman tests
-        run: newman run "Rick&Morty.postman_collection.json"
+        run: newman run "postman/Rick&Morty.postman_collection.json"
 
 
 
